--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 preload="none"
                 controls
                 muted
-                poster="assets/img/logo/logo.jpeg"
+                poster="assets/img/logo/stock-photo-demo-video-sign-icon-perfect-use-for-print-media-web-stock-images-commercial-use-or-any-kind-2285247161-transformed.jpeg"
                 src="assets/video/about.mp4"
               ></video>
             </div>
